[package]
name = "jld-contexts"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
all = ["w3c", "default"]
default = ["schema"]
w3c = ["did-core", "did-resolution", "vc-data-model"]
did-core = []
did-resolution = []
vc-data-model = []
schema = []